# graphviz

./: .ghci  .gitignore  .travis.yml  Changelog  Changelog.md  FAQ  FAQ.md  LICENSE  README  README.md  RunTests.hs  TODO  TODO.md  TestParsing.hs  graphviz.cabal
Data/: GraphViz.hs
Data/GraphViz/: Algorithms.hs  AttributeGenerator.hs  Attributes.hs  Commands.hs  Exception.hs  ParserCombinators.hs  Parsing.hs  PreProcessing.hs  Printing.hs  State.hs  Testing.hs  Types.hs  Util.hs  attrs.txt
Data/GraphViz/Algorithms/: Clustering.hs
Data/GraphViz/Attributes/: Arrows.hs  ColorScheme.hs  Colors.hs  Complete.hs  HTML.hs  Internal.hs  Same.hs  Values.hs
Data/GraphViz/Attributes/Colors/: Brewer.hs  SVG.hs  X11.hs
Data/GraphViz/Commands/: Available.hs  IO.hs
Data/GraphViz/Internal/: State.hs  Util.hs
Data/GraphViz/Testing/: Instances.hs  Properties.hs
Data/GraphViz/Testing/Instances/: Attributes.hs  Canonical.hs  Common.hs  FGL.hs  Generalised.hs  Graph.hs  Helpers.hs
Data/GraphViz/Types/: Canonical.hs  Clustering.hs  Common.hs  Generalised.hs  Graph.hs  Internal.hs  Monadic.hs  Parsing.hs  Printing.hs  State.hs  Testing.hs
Data/GraphViz/Types/Internal/: Common.hs
tests/: Main.hs  RunTests.hs
tests/Data/: GraphVizSpec.hs
tests/Data/GraphViz/: AlgorithmsSpec.hs  PreProcessingSpec.hs  Testing.hs
tests/Data/GraphViz/Attributes/: CompleteSpec.hs  HTMLSpec.hs
tests/Data/GraphViz/Testing/: Instances.hs  Properties.hs  Proxy.hs
tests/Data/GraphViz/Testing/Instances/: Attributes.hs  Canonical.hs  Common.hs  FGL.hs  Generalised.hs  Helpers.hs
tests/Data/GraphViz/Types/: CanonicalSpec.hs  GeneralisedSpec.hs  GraphSpec.hs
utils/: AttributeGenerator.hs  Benchmark.hs  TestParsing.hs
